# momento

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PERSISTENT_STORAGE.md  README.md  add_images.py  config.py  features.py  index.py  logger.py  main.py  pyproject.toml  search.py  store.py  utils.py  validation.py
src/momento/: __init__.py  add_images.py  app_controller.py  augment.py  cache.py  checkpoint.py  cli.py  config.py  device.py  diagnostics.py  error_handler.py  features.py  file_picker.py  index.py  index_utils.py  indexer.py  ingest.py  lock.py  logger.py  ocr.py  output.py  query_manager.py  search.py  shutdown.py  storage_manager.py  validation.py  video.py  yolo.py
src/momento/embedding/: __init__.py  base.py  clip_backend.py
src/momento/retrieval/: __init__.py  fusion.py  query_expansion.py  recall.py  rerank.py  router.py
src/momento/search/: __init__.py  exact_index.py
src/momento/storage/: __init__.py  metadata_store.py
tests/: conftest.py  test_add_images.py  test_app_controller.py  test_augment.py  test_config.py  test_device.py  test_error_handler.py  test_file_picker.py  test_index.py  test_index_utils.py  test_indexer.py  test_ingest.py  test_integration.py  test_output.py  test_query_manager.py  test_search.py  test_v2_features.py  test_validation.py  test_video.py  test_yolo.py
tests/fixtures/: create_fixtures.py  huge.txt
tests/integration/: test_ocr.py
tests/unit/: test_add_images.py  test_cache.py  test_checkpoint.py  test_cli.py  test_clip_backend.py  test_config.py  test_diagnostics.py  test_embedding_backend.py  test_exact_index.py  test_features.py  test_file_picker.py  test_fusion.py  test_indexer.py  test_lock.py  test_logger.py  test_metadata_store.py  test_ocr.py  test_output.py  test_query_expansion.py  test_recall.py  test_rerank.py  test_router.py  test_search.py  test_shutdown.py  test_storage_manager.py  test_v3_search.py  test_validation.py  test_video.py  test_yolo.py
