[project]
name = "momento"
version = "1.0.0-beta"
description = "A semantic image search engine powered by OpenAI CLIP and ChromaDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "clip",
    "pillow>=12.2.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
