[project]
name = "momento"
version = "2.1.0"
description = "A semantic image search engine powered by OpenAI CLIP and ChromaDB"
authors = [
    { name = "Sai Reddy Shyamakura" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "chromadb>=1.5.9",
    "clip",
    "pillow>=12.2.0",
    "platformdirs>=4.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.0",
    "opencv-python-headless>=4.8.0",
    "ultralytics>=8.0.0",
    "easyocr>=1.7.0",
    "tenacity>=8.0.0",
    "psutil>=5.9.0",
]



[project.scripts]
momento = "momento.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as heavy (real models, video/OCR/YOLO). Deselect with -m 'not slow'",
    "unit: fast unit tests (no ML model loading)",
    "integration: heavy tests that load PyTorch/CLIP/YOLO/OCR models",
]
addopts = [
    "-p no:xdist",
    "-p no:forked",
    "-m not slow",
    "--tb=short",
    "-q",
]
filterwarnings = [
    "ignore::DeprecationWarning:PIL",
    "ignore::DeprecationWarning:numpy",
    "ignore::DeprecationWarning:torch",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
